--- a/iQuiz/iQuiz/Base.lproj/Main.storyboard
+++ b/iQuiz/iQuiz/Base.lproj/Main.storyboard
@@ -19,12 +19,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4SL-Ab-me2">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem title="Settings" id="T2J-Ye-M8a">
+                                        <connections>
+                                            <action selector="settingsPressed:" destination="BYZ-38-t0r" id="Hvm-NI-s5N"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vsg-bD-9Kk">
-                                <rect key="frame" x="0.0" y="44" width="375" height="623"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="623" id="B8P-3m-8OO"/>
-                                </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCell" rowHeight="100" id="hyk-33-7EC" customClass="CustomTableViewCell" customModule="iQuiz" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="100"/>
@@ -91,28 +98,16 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4SL-Ab-me2">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                <items>
-                                    <barButtonItem title="Settings" id="T2J-Ye-M8a">
-                                        <connections>
-                                            <action selector="settingsPressed:" destination="BYZ-38-t0r" id="Hvm-NI-s5N"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </items>
-                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="vsg-bD-9Kk" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="1Cj-xF-NW1"/>
-                            <constraint firstItem="vsg-bD-9Kk" firstAttribute="trailing" secondItem="4SL-Ab-me2" secondAttribute="trailing" id="F9O-pj-DzE"/>
-                            <constraint firstItem="vsg-bD-9Kk" firstAttribute="leading" secondItem="4SL-Ab-me2" secondAttribute="leading" id="FPM-qT-YgK"/>
-                            <constraint firstItem="vsg-bD-9Kk" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="J9a-mV-hKT"/>
-                            <constraint firstItem="vsg-bD-9Kk" firstAttribute="top" secondItem="4SL-Ab-me2" secondAttribute="bottom" id="Lls-3M-IA9"/>
-                            <constraint firstItem="4SL-Ab-me2" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Uyr-ZH-LM1"/>
-                            <constraint firstItem="4SL-Ab-me2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="agY-TT-wcr"/>
-                            <constraint firstAttribute="trailing" secondItem="vsg-bD-9Kk" secondAttribute="trailing" id="cGJ-Jr-b1v"/>
-                            <constraint firstItem="4SL-Ab-me2" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="kCF-HY-nPI"/>
+                            <constraint firstItem="4SL-Ab-me2" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="2NM-EG-a9d"/>
+                            <constraint firstItem="4SL-Ab-me2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="A58-b4-fwp"/>
+                            <constraint firstItem="vsg-bD-9Kk" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="C92-QD-2k7"/>
+                            <constraint firstItem="vsg-bD-9Kk" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="NJG-fi-yn5"/>
+                            <constraint firstItem="4SL-Ab-me2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="R7A-uJ-amY"/>
+                            <constraint firstItem="vsg-bD-9Kk" firstAttribute="top" secondItem="4SL-Ab-me2" secondAttribute="bottom" id="euH-FL-qbB"/>
+                            <constraint firstItem="vsg-bD-9Kk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yo8-Pv-F7I"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
